Fix template switching, and add poppins font

--- a/booking/setup/phpgw_en.lang
+++ b/booking/setup/phpgw_en.lang
@@ -112,6 +112,7 @@ last modified	booking	en	Last modified
 joading...	booking	en	Joading...
 location	booking	en	Location
 male	booking	en	Male
+number of	booking	en	Number of
 mo	booking	en	Mo
 modified	booking	en	Modified
 more info	booking	en	More info
