--- a/booking/setup/phpgw_nn.lang
+++ b/booking/setup/phpgw_nn.lang
@@ -117,6 +117,7 @@ last modified	booking	nn	Sist endra
 joading...	booking	nn	Lastar...
 location	booking	nn	Lokale
 male	booking	nn	Mann
+number of	booking	nn	Antall
 mar	booking	nn	mars
 may	booking	nn	mai
 mo	booking	nn	ma.
