--- a/booking/setup/phpgw_no.lang
+++ b/booking/setup/phpgw_no.lang
@@ -112,6 +112,7 @@ last modified	booking	no	Sist endret
 joading...	booking	no	Laster...
 location	booking	no	Lokale
 male	booking	no	Mann
+number of	booking	no	Antall
 mo	booking	no	ma.
 modified	booking	no	Endret
 more info	booking	no	Mer informasjon
