--- a/preferences/setup/phpgw_no.lang
+++ b/preferences/setup/phpgw_no.lang
@@ -71,8 +71,9 @@ should history navigation urls as breadcrumbs	preferences	no	Vis historisk navig
 activate nowrap in yui-tables	preferences	no	Aktiver no-wrap i YUI-tabeller
 select the language of texts and messages within phpgroupware.<br>some languages may not contain all messages, in that case you will see an english message.	preferences	no	Velg språk for tekster og meldinger i BkBygg.<br/>Dersom en oversettelse mangler vil engelsk tekst/melding vises
 users choice	preferences	no	Brukers valg
-norwegian	preferences	no	Norsk Bokmål
-norwegian no	preferences	no	Nynorsk
+norwegian	common	no	Norsk Bokmål
+norwegian nn	common	no	Nynorsk
+english	common	no	Engelsk
 english	preferences	no	Engelsk
 no default	preferences	no	Ingen standard
 no sidecontent	preferences	no	Ingen sideinnhold
