More on generic language selector

--- a/phpgwapi/setup/phpgw_en.lang
+++ b/phpgwapi/setup/phpgw_en.lang
@@ -559,3 +559,5 @@ Show _MENU_ entries	common	en	Show _MENU_ entries
 Loading...	common	en	Loading...
 Processing...	common	en	Processing...
 No matching records found	common	en	No matching records found
+choose language	common	en	Choose language
+which language do you want?	common	en	Which language do you want?
