Lang fixes, and description viewable

--- a/booking/setup/phpgw_nn.lang
+++ b/booking/setup/phpgw_nn.lang
@@ -124,7 +124,7 @@ mo	booking	nn	ma.
 modified	booking	nn	Endra
 more info	booking	nn	Meir informasjon
 name	booking	nn	Namn
-new	booking	nn	NY
+new	booking	nn	Ny
 new activity	booking	nn	Ny aktivitet
 new age group	booking	nn	Ny aldersgruppe
 new allocation	booking	nn	Ny tildeling
