--- a/booking/setup/phpgw_no.lang
+++ b/booking/setup/phpgw_no.lang
@@ -117,7 +117,7 @@ mo	booking	no	ma.
 modified	booking	no	Endret
 more info	booking	no	Mer informasjon
 name	booking	no	Navn
-new	booking	no	NY
+new	booking	no	Ny
 new activity	booking	no	Ny aktivitet
 new age group	booking	no	Ny aldersgruppe
 new allocation	booking	no	Ny tildeling
