--- a/bookingfrontend/setup/phpgw_en.lang
+++ b/bookingfrontend/setup/phpgw_en.lang
@@ -305,6 +305,7 @@ chosen rent period	bookingfrontend	en	Chosen rent period
 rent period	bookingfrontend	en	Rent period
 city	bookingfrontend	en	City
 click to sort ascending	bookingfrontend	en	Click to sort ascending
+clock_short	bookingfrontend	en	Time
 click to sort descending	bookingfrontend	en	Click to sort descending
 collect users	booking	en	Collect users
 contact	bookingfrontend	en	Contact
