--- a/booking/setup/phpgw_en.lang
+++ b/booking/setup/phpgw_en.lang
@@ -746,7 +746,7 @@ Facilities	booking	en	Facilities
 Facility	booking	en	Facility
 Front page filtering	booking	en	Front page filtering
 Frontpage title	booking	en	Frontpage title
-Group (2018)	booking	en	Group (2018)
+Group (2018)	booking	en	Group
 Groups (2018)	booking	en	Groups (2018)
 Help text calendar: Book	booking	en	Help text calendar: book
 Help text organization: Edit group	booking	en	Help text organization: edit group
