--- a/bookingfrontend/setup/phpgw_no.lang
+++ b/bookingfrontend/setup/phpgw_no.lang
@@ -24,6 +24,7 @@ Article	bookingfrontend	no	artikkel
 Associated bookings	bookingfrontend	no	Tilhørende tildelinger/arrangementer
 Back to user list	booking	no	Tilbake til brukerlisten
 Book resource	bookingfrontend	no	Søknad
+booking_calendar	bookingfrontend	no	Bookingkalender
 Booking Cancel information	bookingfrontend	no	Hvis du skal avbestille interntildeling på valgt dato, velg Avbestill-knappen nederst. Skal tiden bli vist som ledig i kalenderen krysser du av for slett tildeling.
 Booking Cancel information2	bookingfrontend	no	Skal du avbestille flere kan du velge Ut sesong eller Avbestill til og velg en dato, du kan også velge intervall (f.eks. annen hver uke).
 Booking Delete information	bookingfrontend	no	Hvis du skal slette interntildeling på valgt dato, velg Slett-knappen nederst.
@@ -514,6 +515,7 @@ remove date	bookingfrontend	no	Fjern dato
 rent object	bookingfrontend	no	Leieobjekt
 rent	bookingfrontend	no	Leie
 rent_premises_facilities_equipment	bookingfrontend	no	Lei lokale, anlegg eller utstyr
+rental_resources	bookingfrontend	no	Utleieressurser
 reserved	bookingfrontend	no	Reservert
 reset	bookingfrontend	no	Nullstill
 resource	bookingfrontend	no	Ressurs
@@ -566,6 +568,7 @@ this application is not within a valid season	bookingfrontend	no	Denne søknaden
 title	bookingfrontend	no	Tittel
 to	bookingfrontend	no	Til
 tu	bookingfrontend	no	tir
+type	bookingfrontend	no	Type
 unit	bookingfrontend	no	Enhet
 unit cost	bookingfrontend	no	Enhetspris
 update results	bookingfrontend	no	Oppdater resultater
