fix articles translation

--- a/bookingfrontend/setup/phpgw_en.lang
+++ b/bookingfrontend/setup/phpgw_en.lang
@@ -21,6 +21,7 @@ Application cart	bookingfrontend	en	Application cart
 Apply filter	bookingfrontend	en	Activate filter
 Apply for time	bookingfrontend	en	Apply for time
 Article	bookingfrontend	en	Article
+articles	bookingfrontend	en	Articles
 Associated bookings	bookingfrontend	en	Associated allocations/events
 Back to user list	booking	en	Back to user list
 Book resource	bookingfrontend	en	Book resource
