--- a/bookingfrontend/setup/phpgw_en.lang
+++ b/bookingfrontend/setup/phpgw_en.lang
@@ -615,3 +615,5 @@ hours	bookingfrontend	en	Hours
 total	bookingfrontend	en	Total
 minute	bookingfrontend	en	Minute
 days	bookingfrontend	en	Days
+continue	bookingfrontend	en	Continue
+billing	bookingfrontend	en	Billing
