--- a/booking/setup/phpgw_no.lang
+++ b/booking/setup/phpgw_no.lang
@@ -932,3 +932,4 @@ differentiate org payer	booking	no	Differensier mellom organisasjon og betaler
 article group	booking	no	Artikkelgruppe
 buffer deadline	booking	no	Buffer/frist
 skip bas	booking	no	Ikke trigge SD-anlegg
+multi domain	booking	no	Støtte for kryss-instans
