--- a/bookingfrontend/setup/phpgw_en.lang
+++ b/bookingfrontend/setup/phpgw_en.lang
@@ -69,6 +69,7 @@ Choose resources	bookingfrontend	en	Choose resources
 Close	bookingfrontend	en	Close
 Collects users from all applications and events	booking	en	Collects users from all applications and events
 Complete applications	bookingfrontend	en	Complete applications
+complete_applications	bookingfrontend	en	Complete applications
 Confirm e-mail address	bookingfrontend	en	Confirm e-mail address
 Contact information name is to long. max 50 characters	bookingfrontend	en	Contact information name is to long. max 50 characters
 Could not delete allocation due to a booking still use it	bookingfrontend	en	Could not delete allocation due to a booking still use it
