hopefully no bugs, rebuild search

--- a/booking/setup/phpgw_en.lang
+++ b/booking/setup/phpgw_en.lang
@@ -771,6 +771,7 @@ Please select a resource category	booking	en	Please select a resource category
 Resource (2018)	booking	en	Resource (2018)
 Resource categories	booking	en	Resource categories
 Resource category	booking	en	Resource category
+resource_category	booking	en	Resource category
 Resources (2018)	booking	en	Resources (2018)
 responsible_city	booking	en	Responsible city
 responsible_street	booking	en	Responsible street
