--- a/bookingfrontend/setup/phpgw_no.lang
+++ b/bookingfrontend/setup/phpgw_no.lang
@@ -99,6 +99,7 @@ Event was created	booking	no	Arrangementet ble opprettet
 Event/activity description	bookingfrontend	no	Kort beskrivelse av arrangementet / aktiviteten
 Event/activity homepage	bookingfrontend	no	Hjemmeside for arrangementet / aktiviteten
 Facilities	bookingfrontend	no	Fasiliteter
+facilities	bookingfrontend	no	Fasiliteter
 Field %1 is required	bookingfrontend	no	Feltet '%1' må fylles ut
 Field %1: Invalid format	bookingfrontend	no	Feltet '%1': ugyldig format
 Find available	bookingfrontend	no	Finn tilgjengelig
