--- a/bookingfrontend/setup/phpgw_en.lang
+++ b/bookingfrontend/setup/phpgw_en.lang
@@ -383,6 +383,7 @@ found none	booking	en	Found none
 fr	bookingfrontend	en	Fr
 free	bookingfrontend	en	Free
 from	bookingfrontend	en	From
+from_date	bookingfrontend	en	From date
 generate allocations	bookingfrontend	en	Generate allocations
 generate allocations from week template	bookingfrontend	en	Generate allocations from week template
 get name from external source	bookingfrontend	en	Get name from external source
@@ -570,6 +571,7 @@ th	bookingfrontend	en	Th
 this application is not within a valid season	bookingfrontend	en	This application is outside the valid season
 title	bookingfrontend	en	Title
 to	bookingfrontend	en	To
+to_date	bookingfrontend	en	To date
 tu	bookingfrontend	en	Tu
 type	bookingfrontend	en	Type
 unit	bookingfrontend	en	Unit
