fix delete item

--- a/bookingfrontend/setup/phpgw_en.lang
+++ b/bookingfrontend/setup/phpgw_en.lang
@@ -302,6 +302,7 @@ category	bookingfrontend	en	Category
 choose a date	bookingfrontend	en	Choose a date
 choose file	bookingfrontend	en	Choose file
 choose rent object and rentperiod	bookingfrontend	en	Choose rent object and rentperiod
+choose rent object	bookingfrontend	en	Choose rent object
 choose rent period	bookingfrontend	en	Choose rent period
 choose target audience	bookingfrontend	en	Choose target audience
 chosen rent object	bookingfrontend	en	Chosen resources
